--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
-    "eslint": "8.15.0",
+    "eslint": "^8.15.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-config-next": "12.1.6",
+    "eslint-plugin-react": "^7.29.4",
     "sass": "^1.51.0"
   }
 }
